# custom_japanese_anki_decks

./: .gitignore  README.md  japanese_ocr_to_anki_research.json  japanese_ocr_to_anki_research.md  pyproject.toml  tmp_ashi_itai.txt  tmp_fast_out.txt
data/Miharu/: seen_words.json
data/Miharu/Prologue/: build.json  deck.apkg  review.json  scan.json
docs/: session-summary.md  usage.md
docs/plans/: 2026-02-15-japanese-anki-ocr-design.md  2026-02-15-japanese-anki-ocr-implementation-plan.md  2026-02-20-normalization-pipeline-decoupling.md  2026-03-11-full-page-mode-design.md
src/jp_anki_builder/: __init__.py  build.py  cards.py  cli.py  config.py  dedup.py  deinflect.py  dict_install.py  dictionary.py  enrich.py  filtering.py  jlpt.py  normalization.py  ocr.py  ocr_corrections.py  path_inference.py  pipeline.py  project_config.py  review.py  scan.py  tokenize.py
tests/: test_build_command.py  test_build_ids.py  test_cards.py  test_cli_smoke.py  test_config_paths.py  test_dedup.py  test_deinflect.py  test_dict_install.py  test_dictionary.py  test_enrich.py  test_filtering.py  test_medium_improvements.py  test_normalization.py  test_ocr.py  test_ocr_corrections.py  test_pipeline_flow.py  test_review_command.py  test_run_command.py  test_scan_command.py  test_tokenize.py  test_ux_improvements.py
tests/fixtures/: sample_ocr_ch1.json  sample_ocr_ch2.json
tests/integration/: test_source_dedup_flow.py
