[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jp-anki-builder"
version = "0.1.0"
description = "Japanese OCR to Anki deck builder"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "genanki>=0.13",
  "pytesseract>=0.3.10",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
japanese_nlp = [
  "fugashi>=1.3.0",
  "unidic-lite>=1.0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
